--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -20,3 +20,9 @@ steps:
     publishJUnitResults: true
     testResultsFiles: '**/surefire-reports/TEST-*.xml'
     goals: 'package'
+- task: AzureRmWebAppDeployment@5
+  inputs:
+      ConnectionType: 'AzureRM'
+      appType: 'webApp'
+      WebAppName: 
+      packageForLinux: '$(System.DefaultWorkingDirectory)/**/*.zip'
